# vehicle_simulator

./: CMakeLists.txt  README.md
car_model/: README.md
car_model/car_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
car_model/car_description/urdf/: car.urdf.xacro
car_model/car_gazebo/: CMakeLists.txt  package.xml
car_model/car_gazebo/include/car_gazebo/: CarInterfacePlugin.h
car_model/car_gazebo/launch/: car_in_gazebo.launch  car_ns.launch  car_upload.launch  two_car_in_gazebo.launch
car_model/car_gazebo/src/: CarInterfacePlugin.cpp
car_model/vehicle/: vehicle_state.cpp  vehicle_state.h
collision_checking/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  collision_checking.cbp  collision_test  test  test_point
collision_checking/include/collision_checking/: AABB2d.h  OBB2d.h  collision_object.h  linesegment2d.h  obstacle.h  point2d.h
collision_checking/include/collosion_checking/: linesegment2d.h  point2d.h
collision_checking/src/: AABB2d.cpp  OBB2d.cpp  linesegment2d.cpp  obstacle.cpp  point2d.cpp  test.cpp
controlling/: README.MD
planning/: CMakeLists.txt  README.md  package.xml
planning/global_planner/include/global_planner/: common.h  constance.h  dubins.h  expander.h  global_planner.h  hybridAstar_algorithm.h  node.h  node2d.h
planning/global_planner/src/: hybridAstar_algorithm.cpp  node.cpp  node2d.cpp
planning/planner_core/include/: vehicle_global_planner.h  vehicle_local_planner.h
scene/: README.md
scene/map/: package.xml
scene/map/launch/: start_map.launch
vehicle_pnc/: CMakeLists.txt  package.xml
vehicle_pnc/include/vehicle_pnc/: vehicle_pnc.h
