<?xml version="1.0"?>
<package>
  <name>planning</name>
  <version>0.0.2</version>
  <description>The planning package</description>
  <maintainer email="chen_liu14@163.com">liu chen</maintainer>
  <license>BSD</license>
  <author email="chen_liu14@163.com">liu chen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</geometry_msgs>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>geometry_msgs</run_depend>
 
  <export></export>
</package>

