<?xml version="1.0"?>
<package format="2">
  <name>car_description</name>
  <version>0.1.0</version>
  <description>
    Meshes and URDF descriptions for car
  </description>
  <maintainer email="chen_liu14@163.com">chen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
